--- a/package.json
+++ b/package.json
@@ -3,19 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@hookform/resolvers": "^3.2.0",
+    "@material-tailwind/react": "^2.0.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "axios-cookiejar-support": "^4.0.7",
+    "npm": "^9.8.1",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
+    "react-hot-toast": "^2.4.1",
+    "react-loading": "^2.0.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-sweetalert2": "^0.6.0",
+    "react-toastify": "^9.1.3",
+    "tough-cookie": "^4.1.3",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "serve -s build -l 5000"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +49,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "autoprefixer": "^9.8.8",
+    "css-loader": "^6.8.1",
+    "postcss": "^7.0.39",
+    "postcss-loader": "^7.3.3",
+    "react-router-dom": "^6.14.2",
+    "style-loader": "^3.3.3",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
 }
